# mapencroach

./: .gitignore  DEMO.md  DEPLOY.md  PLAN.html  PLAN.md  README.md  agents-build-log.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/mapencroach/api/: app.py  auth.py  store.py
backend/src/mapencroach/audit/: chain.py
backend/src/mapencroach/cadastral/: ingestion.py  topology.py
backend/src/mapencroach/context/: README.md  __init__.py  shrug.py
backend/src/mapencroach/db/: models.py
backend/src/mapencroach/domain/: alerts.py  case_engine.py  geography.py  jurisdiction.py
backend/src/mapencroach/imagery/: registry.py
backend/tests/: test_alerts.py  test_api.py  test_audit_chain.py  test_case_engine.py  test_db_models.py  test_geography.py  test_imagery_registry.py  test_ingestion.py  test_jurisdiction.py  test_topology.py
web/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
web/src/app/: error.test.tsx  error.tsx  globals.css  layout.tsx  loading.test.tsx  loading.tsx  not-found.test.tsx  not-found.tsx  page.test.tsx  page.tsx
web/src/components/: AlertSidebar.test.tsx  AlertSidebar.tsx  AlertsTable.test.tsx  AlertsTable.tsx  AllowedNextSteps.test.tsx  AllowedNextSteps.tsx  BasemapToggle.test.tsx  BasemapToggle.tsx  BoundaryGradeBadge.test.tsx  BoundaryGradeBadge.tsx  CaseStateChip.test.tsx  CaseStateChip.tsx  CasesTable.test.tsx  CasesTable.tsx  GoogleMap.test.tsx  GoogleMap.tsx  HistoricalImageryTimeline.test.tsx  (+44 more)
(+19 files in other folders)
