[project]
name = "mapencroach"
version = "0.1.0"
description = "Encroachment intelligence and case management platform for Indian state governments"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.15",
    "shapely>=2.0",
    "geopandas>=1.0",
    "pyjwt>=2.8",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "httpx>=0.27",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mapencroach"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/mapencroach"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
per-file-ignores = { "tests/*" = ["S101"] }
